<resources>
    <string name="app_name">Forecast_MVVM</string>
    <string name="location">Location</string>
    <string name="updateAt">Updated at</string>
    <string name="ClearSky">ClearSky</string>
    <string name="tempTemperature">24°C</string>
    <string name="hint_temp">--°</string>
    <string name="loading">Loading</string>
    <string name="timeHourly">12AM</string>
    <string name="image_content">img</string>
    <string name="weather_state">partially Good</string>
    <string name="weatherStateDesc">Mostly clear currently it is 15° degree in cairo</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="windSpead">Wind Spead</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alarms">Alarms</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="location_header">Location</string>
    <string name="units_header">Units</string>
    <string name="language_header">Language</string>

    <!-- Location Preferences -->
    <string name="location_title">Location</string>

    <!-- lang Preferences -->
    <string name="lang_title">Language</string>

    <!-- unit Preferences -->
    <string name="units_title">Unit</string>


    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_my_map">Map</string>
    <string name="imgDesc">delete Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set">set</string>


    <string name="cloudss">clouds</string>
    <string name="rain">rain</string>
    <string name="fog">fog</string>
    <string name="snow">snow</string>
    <string name="clear">clear</string>
    <string name="mist">mist</string>
    <string name="thunderstorm">thunderstorm</string>
</resources>