<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location_header" app:icon="@drawable/ic_location_24">

        <ListPreference
            app:defaultValue="GPS"
            app:entries="@array/location_entries"
            app:entryValues="@array/location_values"
            app:key="GPS"
            app:title="@string/location_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/units_header" app:icon="@drawable/ic_units_24">
        <ListPreference
            app:defaultValue="Standard"
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:key="Kelvin"
            app:title="@string/units_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/language_header" app:icon="@drawable/ic_language_24">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="English"
            app:title="@string/lang_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>