<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    style="@style/temp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".screens.favourite.bottomSheet.BottomSheetFavourite"
    tools:visibility="visible">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_temperature"
                style="@style/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_temp"
                android:textColorHint="#FFFFFF"
                android:textSize="70sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourlyRecycleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_state" />

            <TextView
                android:id="@+id/textView_state"
                style="@style/mainTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weather_state"
                android:textColorHint="#F4EBEB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_temperature" />

            <View
                android:id="@+id/horizontalLine"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/hourlyRecycleView" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hourlyRecycleView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dailyRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                    </androidx.recyclerview.widget.RecyclerView>

                    <View
                        android:id="@+id/horizontalLine1"
                        android:layout_width="match_parent"
                        android:layout_height=".5dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/gray" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                style="@style/details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/humidity" />

                            <TextView
                                android:id="@+id/humidityTextView"
                                style="@style/details_val"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/humidity"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                style="@style/details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/pressure" />

                            <TextView
                                android:id="@+id/pressureTextView"
                                style="@style/details_val"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/pressure"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                style="@style/details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/humidity"
                                android:text="@string/clouds" />

                            <TextView
                                android:id="@+id/cloudsTextView"
                                style="@style/details_val"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/clouds"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                style="@style/details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/windSpead" />

                            <TextView
                                android:id="@+id/windTextView"
                                style="@style/details_val"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/windSpead"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>